tests/baselines/reference/compareAndSetOperatorMisuse05.errors.txt
tests/cases/compiler/compareAndSetOperatorMisuse05.ts(6,39): error TS555370006: '__compareAndSet' requires argument-list containing two arguments and cannot be followed by any other assignment-operators.


==== tests/cases/compiler/compareAndSetOperatorMisuse05.ts (1 errors) ====
    {
        /**  
         * this shall raise syntax error exactly "__compareAndSet requires two-val args-list and cannot be followed by assignment operators".
         */
        {
            example.value __compareAndSet += "5" ;
                                          ~~
!!! error TS555370006: '__compareAndSet' requires argument-list containing two arguments and cannot be followed by any other assignment-operators.
        }
    }
    
    
    
    
    
    